iac/ecs.tf
resource "aws_ecs_cluster" "main" {
  name = "${var.project_name}-ecs-cluster-${terraform.workspace}"

  setting {
    name  = "containerInsights"
    value = "enabled"
  }

  tags = {
    Name        = "${var.project_name}-ecs-cluster-${terraform.workspace}"
    Environment = terraform.workspace
    Project     = var.project_name
    ManagedBy   = "Terraform"
  }
}

resource "aws_ecs_task_definition" "main" {
  family                   = "${var.project_name}-task-${terraform.workspace}"
  cpu                      = var.ecs_cpu
  memory                   = var.ecs_memory
  execution_role_arn       = aws_iam_role.ecs_task_exec.arn
  task_role_arn            = aws_iam_role.ecs_task.arn
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"

  container_definitions = jsonencode([{
    name      = "web"
    image     = "nginx:latest"
    essential = true

    readonlyRootFilesystem = true

    portMappings = [{
      containerPort = 8000
      hostPort      = 8000
      protocol      = "tcp"
    }]

    environment = [
      { name = "ENVIRONMENT",  value = terraform.workspace },
      { name = "PROJECT_NAME", value = var.project_name },
    ]

    secrets = [
      {
        name      = "CULQI_SECRET_KEY"
        valueFrom = "${aws_secretsmanager_secret.culqi_credentials.arn}:secret_key::"
      }
    ]
  }])

  tags = {
    Name        = "${var.project_name}-task-${terraform.workspace}"
    Environment = terraform.workspace
    Project     = var.project_name
    ManagedBy   = "Terraform"
  }
}

resource "aws_ecs_service" "main" {
  name                               = "${var.project_name}-svc-${terraform.workspace}"
  cluster                            = aws_ecs_cluster.main.id
  task_definition                    = aws_ecs_task_definition.main.arn
  desired_count                      = var.ecs_desired_count
  launch_type                        = "FARGATE"
  deployment_maximum_percent         = 200
  deployment_minimum_healthy_percent = 50

  load_balancer {
    target_group_arn = aws_lb_target_group.main.arn
    container_name   = "web"
    container_port   = 8000
  }

  network_configuration {
    security_groups  = [aws_security_group.ecs.id]
    subnets          = [aws_subnet.private_app_a.id, aws_subnet.private_app_b.id]
    assign_public_ip = false
  }

  tags = {
    Name        = "${var.project_name}-svc-${terraform.workspace}"
    Environment = terraform.workspace
    Project     = var.project_name
    ManagedBy   = "Terraform"
  }

  depends_on = [aws_lb_listener.main]
}
